added content to projects page

--- a/style.css
+++ b/style.css
@@ -10,16 +10,16 @@ body {
     height: 100vh;
     overflow: hidden
 }
+
 a {
     color: white;
     text-decoration: none;
 }
 
-a:hover 
-{
-     color:white; 
-     text-decoration:none; 
-     cursor:pointer;  
+a:hover {
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .container {
@@ -274,53 +274,61 @@ section {
     align-items: center;
     z-index: 0;
 }
-#research .research-body .research-carousel{
+
+#research .research-body .research-carousel {
     width: 100%;
     height: 80%
 }
+
 #research .research-body .research-carousel .card {
     /* width: 90%; */
     background: #333333;
     color: white;
 }
-#research .research-body .research-carousel .card .card-body{
+
+#research .research-body .research-carousel .card .card-body {
     padding: 15px;
     height: 480px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
-} 
-#research .research-body .research-carousel .card .card-body .paper-title{
+}
+
+#research .research-body .research-carousel .card .card-body .paper-title {
     font-size: 25px;
     font-weight: 600;
     height: 75px;
     text-align: center;
 }
-#research .research-body .research-carousel .card .card-body .summary{
+
+#research .research-body .research-carousel .card .card-body .summary {
     height: 250px;
     padding-top: 20px;
     font-size: 15px;
     text-align: justify;
 }
 
-#research .research-body .card .card-body .card-btns{
+#research .research-body .card .card-body .card-btns {
     padding-top: 50px;
     /* width: 50%; */
     display: flex;
     align-items: center;
     justify-content: center;
-} 
+}
+
 #research .paper-icon,
-#research .github-icon{
+#research .github-icon {
     padding: 0 30px;
     font-size: 50px;
 }
-.owl-dots{
+
+.owl-dots {
     text-align: center;
     margin-top: 20px;
 }
-.owl-dot{
+
+.owl-dot {
     height: 13px;
     width: 13px;
     margin: 0 5px;
@@ -329,25 +337,30 @@ section {
     border: 2px solid teal!important;
     transition: all 0.3s ease;
 }
-.owl-dot.active{
+
+.owl-dot.active {
     width: 35px;
     border-radius: 14px;
 }
+
 .owl-dot.active,
-.owl-dot:hover{
+.owl-dot:hover {
     background: teal!important;
 }
 
+
 /* potato styling  */
 
-.potats-img img{
+.potats-img img {
     object-fit: contain;
     width: 100%;
     height: 250px;
 }
-.wait-for-more{
+
+.wait-for-more {
     text-align: center;
 }
+
 
 /* projects section  */
 
@@ -373,17 +386,19 @@ section {
     align-items: center;
     flex-direction: column;
 }
-#projects .projects-body .project-types{
+
+#projects .projects-body .project-types {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     padding: 20px;
 }
+
 .mldl,
 .appdev,
 .webdev,
-.miscprojects{
+.miscprojects {
     border: solid 3px coral;
     padding: 5px 15px;
     height: 30px;
@@ -393,42 +408,45 @@ section {
     font-weight: 600;
     transition: all 0.3s ease;
 }
+
 .mldl:hover,
 .appdev:hover,
 .webdev:hover,
-.miscprojects:hover{
+.miscprojects:hover {
     background: coral;
     color: #333333;
     font-weight: 600;
 }
+
 .mldl.active,
 .appdev.active,
 .webdev.active,
-.miscprojects.active{
+.miscprojects.active {
     color: #333333;
     font-weight: 600;
     background: coral;
 }
+
 .mldlbody,
 .appdevbody,
 .webdevbody,
-.miscbody{
+.miscbody {
     /* margin: 25px; */
     padding-top: 30px;
     width: 100%;
-    height:100%;
+    height: 100%;
 }
 
 .appdevbody,
 .webdevbody,
-.miscbody{
-    display:none;
+.miscbody {
+    display: none;
 }
 
 .mldlbody .project-title,
 .appdevbody .project-title,
 .webdevbody .project-title,
-.miscbody .project-title{
+.miscbody .project-title {
     font-size: 25px;
     font-weight: 600;
     height: 75px;
@@ -438,29 +456,30 @@ section {
 .mldlbody .project-desc,
 .appdevbody .project-desc,
 .webdevbody .project-desc,
-.miscbody .project-desc{
+.miscbody .project-desc {
     height: 300px;
     padding-top: 20px;
     font-size: 15px;
     text-align: justify;
 }
+
 .mldlbody .card .card-body,
 .appdevbody .card .card-body,
 .webdevbody .card .card-body,
-.miscbody .card .card-body{
-    height:100%;
+.miscbody .card .card-body {
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: start;
     flex-direction: column;
 }
 
-.mldlbody i,
-.appdevbody i,
-.webdevbody i,
-.miscbody i{
+#projects .play-icon,
+#projects .github-icon {
+    padding: 0 30px;
     font-size: 50px;
 }
+
 
 /* contact section  */
 
@@ -478,14 +497,14 @@ section {
         font-size: 13px;
         text-align: justify;
     }
-    #research .research-body .research-carousel .card .card-body{
+    #research .research-body .research-carousel .card .card-body {
         height: 400px;
     }
-    .owl-dots{
+    .owl-dots {
         text-align: center;
         margin-top: 20px;
     }
-    .owl-dot{
+    .owl-dot {
         height: 13px;
         width: 13px;
         margin: 0 5px;
@@ -494,12 +513,12 @@ section {
         border: 2px solid teal!important;
         transition: all 0.3s ease;
     }
-    .owl-dot.active{
+    .owl-dot.active {
         width: 35px;
         border-radius: 14px;
     }
     .owl-dot.active,
-    .owl-dot:hover{
+    .owl-dot:hover {
         background: teal!important;
     }
 }
@@ -560,35 +579,35 @@ section {
     #about .about-body .info .dwnld-cv:hover {
         background-color: coral;
     }
-    #research .research-body{
+    #research .research-body {
         height: 80%;
         z-index: 0;
     }
-    #research .research-body .research-carousel .card .card-body{
+    #research .research-body .research-carousel .card .card-body {
         height: 350px;
     }
-    #research .research-body .research-carousel .card .card-body .paper-title{
+    #research .research-body .research-carousel .card .card-body .paper-title {
         height: 30px;
         padding-top: 5px;
         font-size: 20px;
     }
-    #research .research-body .research-carousel .card .card-body .summary{
+    #research .research-body .research-carousel .card .card-body .summary {
         height: 250px;
         font-size: 15px;
         text-align: justify;
     }
-    #research .research-body .card .card-body .card-btns{
+    #research .research-body .card .card-body .card-btns {
         padding-top: 20px;
         width: 50px;
         height: 50px;
         display: flex;
         align-items: center;
         justify-content: center;
-    } 
+    }
     .mldlbody,
     .appdevbody,
     .webdevbody,
-    .miscbody{
+    .miscbody {
         margin: 0;
         padding: 0;
         z-index: 0;
@@ -596,7 +615,7 @@ section {
     .mldlbody .card-body,
     .appdevbody .card-body,
     .webdevbody .card-body,
-    .miscbody .card-body{
+    .miscbody .card-body {
         margin: 0;
         padding: 20px;
         height: 60vh;
@@ -606,11 +625,16 @@ section {
     .mldlbody .card-body .project-title,
     .appdevbody .card-body .project-title,
     .webdevbody .card-body .project-title,
-    .miscbody .card-body .project-title{
+    .miscbody .card-body .project-title {
         padding: 0;
         margin: 0;
     }
-  
+    #research .paper-icon,
+    #research .github-icon,
+    #projects .play-icon,
+    #projects .github-icon {
+        font-size: 40px;
+    }
 }
 
 @media (max-width: 680px) {
@@ -663,9 +687,9 @@ section {
         display: none;
     }
     #about .title,
-    #skills .title ,
+    #skills .title,
     #research .title,
-    #projects .title{
+    #projects .title {
         padding: 0;
         margin: 0;
     }
@@ -701,7 +725,7 @@ section {
     #about .about-body .info .dwnld-cv:hover {
         background-color: none;
     }
-    #skills .skills-body{
+    #skills .skills-body {
         padding-top: 10px;
         justify-content: start;
     }
@@ -714,42 +738,41 @@ section {
         zoom: 0.6;
         -moz-transform: scale(0.6);
     }
-    #research .research-body{
-        height: 80%;  
+    #research .research-body {
+        height: 80%;
         z-index: 0;
         justify-content: start;
         padding-top: ;
     }
-    
-    #research .research-body .research-carousel .card .card-body{
+    #research .research-body .research-carousel .card .card-body {
         height: 450px;
     }
-    #research .research-body .research-carousel .card .card-body .paper-title{
+    #research .research-body .research-carousel .card .card-body .paper-title {
         height: 100px;
         width: 100%;
         padding-top: 5px;
         font-size: 20px;
     }
-    #research .research-body .research-carousel .card .card-body .summary{
+    #research .research-body .research-carousel .card .card-body .summary {
         height: 380px;
         font-size: 12px;
         text-align: justify;
     }
-    #research .research-body .card .card-body .card-btns{
+    #research .research-body .card .card-body .card-btns {
         padding-top: 20px;
         width: 60px;
         height: 40px;
         display: flex;
         align-items: center;
         justify-content: center;
-    } 
-    #projects .project-types{
-        padding: 10px; 
+    }
+    #projects .project-types {
+        padding: 10px;
     }
     .mldl,
     .appdev,
     .webdev,
-    .miscprojects{
+    .miscprojects {
         font-size: 11px;
         height: 30px;
         width: 40px;
@@ -759,15 +782,15 @@ section {
     }
     .mldlbody,
     .appdevbody,
-    .webdevbody, 
-    .miscbody{
+    .webdevbody,
+    .miscbody {
         z-index: 0;
         /* height: 500px; */
     }
     .mldlbody .card-body,
     .appdevbody .card-body,
     .webdevbody .card-body,
-    .miscbody .card-body{
+    .miscbody .card-body {
         margin: 0;
         font-size: 15px;
         text-align: justify;
@@ -777,23 +800,29 @@ section {
     .mldlbody .card-body .project-desc,
     .appdevbody .card-body .project-desc,
     .webdevbody .card-body .project-desc,
-    .miscbody .card-body .project-desc{
+    .miscbody .card-body .project-desc {
         font-size: 11px;
         height: 250px;
+    }
+    #research .paper-icon,
+    #research .github-icon,
+    #projects .play-icon,
+    #projects .github-icon {
+        font-size: 30px;
     }
 }
 
 @media (max-width: 380px) {
     #about .title,
     #skills .title,
-    #research .title{
+    #research .title {
         font-size: 20px;
         padding: 0;
         margin: 0;
     }
     #about .about-body,
     #skills .skills-body,
-    #research .research-body{
+    #research .research-body {
         padding: 0;
         margin: 0;
         display: flex;
@@ -835,21 +864,20 @@ section {
         zoom: 0.5;
         -moz-transform: scale(0.5);
     }
-    
-    #research .research-body .research-carousel .card .card-body{
+    #research .research-body .research-carousel .card .card-body {
         height: 350px;
     }
-    #research .research-body .research-carousel .card .card-body .paper-title{
+    #research .research-body .research-carousel .card .card-body .paper-title {
         height: 40px;
         padding-top: 5px;
         font-size: 15px;
     }
-    #research .research-body .research-carousel .card .card-body .summary{
+    #research .research-body .research-carousel .card .card-body .summary {
         height: 250px;
         font-size: 11px;
         text-align: justify;
     }
-    #research .research-body .card .card-body .card-btns{
+    #research .research-body .card .card-body .card-btns {
         padding: 40px 0;
         width: 30px;
         height: 5px;
@@ -858,21 +886,22 @@ section {
         justify-content: center;
     }
     #research .paper-icon,
-    #research .github-icon{
+    #research .github-icon,
+    #projects .play-icon,
+    #projects .github-icon {
         width: 20px;
         height: 30px;
     }
     .mldlbody,
     .appdevbody,
-    .webdevbody, 
-    .miscbody{
+    .webdevbody,
+    .miscbody {
         z-index: 0;
     }
-    
     .mldlbody .card-body,
     .appdevbody .card-body,
     .webdevbody .card-body,
-    .miscbody .card-body{
+    .miscbody .card-body {
         margin: 0;
         padding: 5px;
         height: 60vh;
@@ -881,14 +910,14 @@ section {
     .mldlbody .card-body .project-desc,
     .appdevbody .card-body .project-desc,
     .webdevbody .card-body .project-desc,
-    .miscbody .card-body .project-desc{
+    .miscbody .card-body .project-desc {
         font-size: 11px;
         height: 200px;
     }
     .mldlbody i,
     .appdevbody i,
     .webdevbody i,
-    .miscbody i{
+    .miscbody i {
         font-size: 30px;
     }
 }
